feat(translations): add a new translations-test plugin to test and demo translations features (#1484)
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/translations/packages/app/package.json
+++ b/workspaces/translations/packages/app/package.json
@@ -50,6 +50,7 @@
     "@material-ui/icons": "^4.9.1",
     "@red-hat-developer-hub/backstage-plugin-theme": "^0.10.0",
     "@red-hat-developer-hub/backstage-plugin-translations": "workspace:^",
+    "@red-hat-developer-hub/backstage-plugin-translations-test": "workspace:^",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
