--- a/workspaces/translations/package.json
+++ b/workspaces/translations/package.json
@@ -25,7 +25,7 @@
     "lint:all": "backstage-cli repo lint",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "new": "backstage-cli new --scope @red-hat-developer-hub",
+    "new": "backstage-cli new --scope red-hat-developer-hub",
     "postinstall": "cd ../../ && yarn install"
   },
   "workspaces": {
