--- a/workspaces/translations/plugins/translations/package.json
+++ b/workspaces/translations/plugins/translations/package.json
@@ -2,13 +2,26 @@
   "name": "@red-hat-developer-hub/backstage-plugin-translations",
   "version": "0.0.1",
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "exports": {
+    ".": "./src/index.ts",
+    "./alpha": "./src/alpha.ts",
+    "./package.json": "./package.json"
+  },
+  "typesVersions": {
+    "*": {
+      "alpha": [
+        "src/alpha.ts"
+      ],
+      "package.json": [
+        "package.json"
+      ]
+    }
+  },
   "main": "src/index.ts",
   "types": "src/index.ts",
-  "publishConfig": {
-    "access": "public",
-    "main": "dist/index.esm.js",
-    "types": "dist/index.d.ts"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/redhat-developer/rhdh-plugins",
@@ -18,7 +31,8 @@
     "role": "frontend-plugin",
     "pluginId": "translations",
     "pluginPackages": [
-      "@red-hat-developer-hub/backstage-plugin-translations"
+      "@red-hat-developer-hub/backstage-plugin-translations",
+      "@red-hat-developer-hub/backstage-plugin-translations-backend"
     ]
   },
   "sideEffects": false,
@@ -32,11 +46,13 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/core-components": "^0.17.2",
-    "@backstage/core-plugin-api": "^1.10.7",
-    "@backstage/plugin-user-settings": "^0.8.22",
-    "@backstage/theme": "^0.6.6",
+    "@backstage/core-components": "^0.17.5",
+    "@backstage/core-plugin-api": "^1.10.9",
+    "@backstage/plugin-user-settings": "^0.8.25",
+    "@backstage/theme": "^0.6.8",
     "@backstage/types": "^1.2.1",
+    "@mui/icons-material": "5.18.0",
+    "@mui/material": "5.18.0",
     "i18next": "^22.4.15",
     "zen-observable": "^0.10.0"
   },
@@ -44,10 +60,10 @@
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.32.1",
-    "@backstage/core-app-api": "^1.17.0",
-    "@backstage/dev-utils": "^1.1.10",
-    "@backstage/test-utils": "^1.7.8",
+    "@backstage/cli": "^0.34.1",
+    "@backstage/core-app-api": "^1.18.0",
+    "@backstage/dev-utils": "^1.1.13",
+    "@backstage/test-utils": "^1.7.11",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
